// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should list out 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
     
  </h1>
</div>
`;

exports[`should list out 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $2,353.24
     
  </h1>
</div>
`;
